# LingoMotos

./: .env.example  .gitignore  README.md  TODO.md  components.json  index.html  package-lock.json  package.json  public.key  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
docs/: architecture.md  branding-policy.md  build-blockers-fixed-2026-05-15.md  build-final-2026-05-15.md  current-architecture-2026-05-15.md  data-storage-policy.md  database-schema.md  design-system.md  final-fixes-before-build-2026-05-15.md  manual-offline-validation.md  manual-pre-build-checklist.md  mvp-checklist-2026-05-15.md  offline-first.md  persistence-audit-2026-05-15.md  pre-build-data-protection-2026-05-15.md  product-import.md  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial_system_tables.sql  0002_commerce_inventory_finance_schema.sql  0003_product_import_batches.sql  0004_offline_backup_sync_metadata.sql  0005_erp_routes_cash_finance.sql  0005_erp_routes_cash_finance_whatsapp.sql  0006_financial_goals.sql  0007_products_stock_real_persistence.sql  0008_cash_sales_finance_integration.sql  0009_master_password.sql  0010_store_pix_settings.sql  0011_sales_discount_type_amount.sql  0012_accounts_payable_receivable.sql  0013_product_custom_fields.sql  0014_auto_backup_settings.sql  0015_backup_history_error_message.sql  0016_customer_motorcycle_model.sql  README.md
src-tauri/src/: app_state.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: README.md  commerce.rs  mod.rs  system.rs  ui.rs
src-tauri/src/database/: connection.rs  migrations.rs  mod.rs
src-tauri/src/repositories/: README.md  commerce_repository.rs  mod.rs  system_repository.rs
src-tauri/src/services/: README.md  export_service.rs  mod.rs  offline_service.rs  system_service.rs
(+115 files in other folders)
