[package]
name = "lingomotos"
version = "0.1.0"
description = "Sistema desktop offline-first para loja e oficina de motos"
authors = ["LingoMotos"]
edition = "2021"

[lib]
name = "lingomotos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "1"

