[package]
name = "lingomotos"
version = "0.1.9"
description = "Sistema de gerencimento de oficinas de motos"
authors = ["LingoMotos"]
edition = "2021"

[lib]
name = "lingomotos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
thiserror = "1"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["clock"] }
deunicode = "1"
